@@ -1,3 +1,8 @@
+2005-03-25  Geoffrey Keating  <geoffk@apple.com>
+
+	* config/rs6000/darwin-fallback.c: Don't include <ucontext.h>.
+	Use our own structure definitions.
+
 2005-03-02  Geoffrey Keating  <geoffk@apple.com>
 
 	* config/darwin8.h (LIB_SPEC): Switch -lmx and -lSystem.
